Migration fonctionnelle pour l'init du daemon

--- a/configurations/ConfigurationTest.tm.json
+++ b/configurations/ConfigurationTest.tm.json
@@ -11,7 +11,5 @@
 	"out":"log.out"},
 	"env":{"test":"t"},
 	"workingDirectory":"path",
-	"umask":"0755",
-	"name":"ConfigurationTest",
-	"subprocess":[]
+	"umask":"0755"
 }
